front: implement the logout with the link "Se déconnecter"

--- a/front/src/app/mdd/components/me/me.component.html
+++ b/front/src/app/mdd/components/me/me.component.html
@@ -23,7 +23,7 @@
 
     <mat-card-actions class="profile-actions">
       <button mat-raised-button color="primary">Sauvegarder</button>
-      <a mat-button color="warn">Se déconnecter</a>
+      <a mat-button color="warn" (click)="onLogoutClick()">Se déconnecter</a>
     </mat-card-actions>
   </mat-card-content>
 </div>
