back: make it possible to log with both userName and email

--- a/front/src/app/auth/components/login/login.component.html
+++ b/front/src/app/auth/components/login/login.component.html
@@ -9,8 +9,8 @@
             matInput
             placeholder="Entrez votre e-mail ou nom d'utilisateur"
             type="text"
-            id="email"
-            formControlName="email"
+            id="login"
+            formControlName="login"
             #email
           />
         </mat-form-field>
