front: article form should consider the currently connected user when creating new article.

--- a/front/src/app/auth/components/login/login.component.html
+++ b/front/src/app/auth/components/login/login.component.html
@@ -37,7 +37,7 @@
           (click)="submit()"
           [disabled]="loginForm.invalid"
         >
-          S'inscrire
+          Se connecter
         </button>
       </div>
     </div>
