--- a/front/src/app/mdd/components/article/articleform/articleform.component.scss
+++ b/front/src/app/mdd/components/article/articleform/articleform.component.scss
@@ -12,7 +12,7 @@
   margin: 0 auto; // Centrer le conteneur par rapport à l'écran
 
   padding: 10px 0; // Ajoutez un padding pour un peu d'espace en haut et en bas.
-  background-color: #e07272; /* couleur de fond temporaire pour le dépannage */
+  //background-color: #e07272; /* couleur de fond temporaire pour le dépannage */
 }
 
 .input-field {
